# Flip-Translate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/model/: flip_model.cpp  flip_model.h
src/persistence/: iflip_persistence.h  sql_persistence.cpp  sql_persistence.h
src/view/: flip_widget.cpp  flip_widget.h
